--- a/style1.css
+++ b/style1.css
@@ -34,12 +34,14 @@ header > h1 {
 
 #help {
     float: right;
+    color: gray;
     position: relative;
     margin: 18px 20px;
 }
 
 #help:hover {
     cursor: pointer;
+    color: white;
 }
 
 .credentials {
