--- a/style1.css
+++ b/style1.css
@@ -34,7 +34,7 @@ header > h1 {
 
 #help {
     float: right;
-    color: gray;
+    color: silver;
     position: relative;
     margin: 18px 20px;
 }
