--- a/css/style1.css
+++ b/css/style1.css
@@ -16,7 +16,10 @@ header {
     color: white;
     text-align: center;
     padding: 10px;
+    width: 100vw;
+    height: auto;
     margin-bottom: 50px;
+    position: relative;
 }
 
 header > h1 {
@@ -33,10 +36,11 @@ header > h1 {
 }
 
 #help {
-    float: right;
+    position: absolute;
+    top: 30%;
+    right: 1%;
     color: white;
-    position: relative;
-    margin: 18px 20px;
+    margin-left: 20px;
 }
 
 #help:hover {
@@ -73,6 +77,9 @@ header > h1 {
 
 .btn {
     display: block;
+    font-size: 16px;
+    color: white;
+    letter-spacing: 2px;
     margin: 0 auto;
     margin-bottom: 10px;
     width: 25%;
@@ -82,13 +89,6 @@ header > h1 {
     outline: none;
     border-radius: 8px;
     transition: background-color .3s ease;
-}
-
-.btn a {
-    font-size: 16px;
-    text-decoration: none;
-    color: white;
-    letter-spacing: 2px;
 }
 
 .btn:hover {
