--- a/css/style2.css
+++ b/css/style2.css
@@ -47,7 +47,7 @@ header > h1 {
     cursor: pointer;
 }
 
-main {
+.section-1 {
     margin-top: 120px;
 }
 
@@ -70,4 +70,78 @@ button {
 button:hover {
     background-color: #287D7F;   
     cursor: pointer;
+}
+
+#plus {
+    position: absolute;
+    top: 33%;
+    right: 1%;
+    color: white;
+    margin-left: 20px;
+    font-weight: lighter;
+}
+
+.import {
+    background-color: #E6E6E6;
+    color: black;
+    border-radius: 1px;
+    margin-bottom: 20px;
+    width: 50vw;
+    height: auto;
+}
+
+#btn-plus {
+    padding-right: 30px;    
+}
+
+.import:hover {
+    background-color: #A5A0A0;
+}
+
+.options {
+   width: 50vw;
+   margin: 20px auto;
+   display: flex;
+   justify-content: space-around;
+}
+
+.option {
+  margin-left: 10px;
+  padding-bottom: 2px;
+}
+
+input[type='radio'] {
+    -webkit-appearance:none;
+    width:14px;
+    height:14px;
+    border:1px solid darkgray;
+    border-radius:50%;
+    outline:none;
+    box-shadow:0 0 5px 0px gray inset;
+}
+input[type='radio']:hover {
+    box-shadow:0 0 5px 0px #27B6C1 inset;
+}
+input[type='radio']:before {
+    content:'';
+    display:block;
+    width:60%;
+    height:60%;
+    margin: 20% auto;    
+    border-radius:50%;    
+}
+input[type='radio']:checked:before {
+    background:#27B6C1;
+}
+
+textarea {
+    width: 50%;
+    margin-left: 25%;
+    resize: none;
+    margin-bottom: 10px;
+}
+
+textarea:focus {
+    outline: none;
+    border:1px solid #27B6C1;
 }
