--- a/css/style2.css
+++ b/css/style2.css
@@ -11,6 +11,59 @@ body {
     overflow: auto;
 }
 
+.section-3 {
+    position:fixed;
+    width:100%;
+    height:100%;
+    background: rgba(0,0,0,0.8);
+    z-index: 999;
+}
+
+#pop-up-settings {
+    width: 50%;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 1px 2px 5px 3px white;
+}
+
+.list {
+    list-style-type: none;
+    display: block;
+    text-align: center;
+}
+
+.list > li {
+    background-color: white;
+    margin: 20px 10px;
+    padding: 10px 0px;
+    border: 2px solid #27B6C1;
+}
+
+.cross-div {
+    margin-top: 5px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+#cross {
+    margin-right: 10px;
+    color: white;
+}
+
+#cross:hover {
+    color: lightcoral;
+}
+
+.list > li:hover {
+    cursor: pointer;
+    background-color: #27B6C1;
+    color: white;
+    border: 2px solid black;
+}
+
 header {
     background-color: #27B6C1;
     color: white;
@@ -73,6 +126,7 @@ button:hover {
 }
 
 #plus {
+    display: none;
     position: absolute;
     top: 33%;
     right: 1%;
@@ -81,7 +135,7 @@ button:hover {
     font-weight: lighter;
 }
 
-.import {
+.top-button {
     background-color: #E6E6E6;
     color: black;
     border-radius: 1px;
@@ -94,13 +148,18 @@ button:hover {
     padding-right: 30px;    
 }
 
-.import:hover {
+#paper-plane {
+    float: right;
+    margin-right: 30px;
+}
+
+.top-button:hover {
     background-color: #A5A0A0;
 }
 
 .options {
    width: 50vw;
-   margin: 20px auto;
+   margin: 10px auto;
    display: flex;
    justify-content: space-around;
 }
@@ -134,6 +193,13 @@ input[type='radio']:checked:before {
     background:#27B6C1;
 }
 
+.subject {
+    display: none;
+    width: 50%;
+    margin-left: 25%;
+    margin-bottom: 10px;
+}
+
 textarea {
     width: 50%;
     margin-left: 25%;
@@ -141,7 +207,7 @@ textarea {
     margin-bottom: 10px;
 }
 
-textarea:focus {
+.subject:focus, textarea:focus {
     outline: none;
     border:1px solid #27B6C1;
 }
