--- a/css/style2.css
+++ b/css/style2.css
@@ -11,7 +11,7 @@ body {
     overflow: auto;
 }
 
-.section-3 {
+.section-3, .portfolios {
     position:fixed;
     width:100%;
     height:100%;
@@ -19,7 +19,7 @@ body {
     z-index: 999;
 }
 
-#pop-up-settings {
+#pop-up-settings, .pop-up-portfolio {
     width: 50%;
     height: auto;
     position: absolute;
@@ -27,6 +27,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 1px 2px 5px 3px white;
+    background-color: white;
 }
 
 .list {
@@ -36,10 +37,11 @@ body {
 }
 
 .list > li {
-    background-color: white;
+    background-color: #27B6C1;
     margin: 20px 10px;
     padding: 10px 0px;
-    border: 2px solid #27B6C1;
+    color: white;
+    border-radius: 8px;
 }
 
 .cross-div {
@@ -48,20 +50,18 @@ body {
     justify-content: flex-end;
 }
 
-#cross {
+#cross, #cross-1 {
     margin-right: 10px;
-    color: white;
+    color: lightslategray;
 }
 
-#cross:hover {
+#cross:hover, #cross-1:hover {
     color: lightcoral;
 }
 
 .list > li:hover {
     cursor: pointer;
-    background-color: #27B6C1;
-    color: white;
-    border: 2px solid black;
+    background-color: #287D7F;
 }
 
 header {
@@ -211,3 +211,63 @@ textarea {
     outline: none;
     border:1px solid #27B6C1;
 }
+
+.container {
+    display: block;
+    position: relative;
+    padding: 10px 50px;
+    margin: 12px;
+    cursor: pointer;
+    font-size: 18px;
+    user-select: none;
+    color: black;
+    border: 1px solid black;
+}
+
+.container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.checkmark {
+    position: absolute;
+    top: 7px;
+    left: 10px;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+  }
+
+  .container:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
+
+  .container input:checked ~ .checkmark {
+    background-color: #27B6C1;
+  }
+
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+
+  .container input:checked ~ .checkmark:after {
+    display: block;
+  }
+
+  .container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    transform: rotate(45deg);
+  }
+
+
+  
