--- a/css/style1.css
+++ b/css/style1.css
@@ -113,6 +113,9 @@ header > h1 {
     #help {
         right: 5%;
     }
+    .credentials > h1 {
+        margin-bottom: 50px;
+    }
 }
 
 @media only screen  and (max-width: 450px) {
